--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
+    </com.amap.api.maps.MapView>
+
+
         <Button
+            android:translationZ="1dp"
             android:id="@+id/main_btn"
             android:layout_width="match_parent"
             android:layout_height="80dp" />
-
-    </com.amap.api.maps.MapView>
 </RelativeLayout>
